...
  | 'steam'
  | 'reddit'
  | 'playstation'
  | 'xbox'
  | 'epic_games';

export type Visibility = 'everyone' | 'friends' | 'none';

export type PrivacyLevel = 'everyone' | 'friends' | 'server_members' | 'nobody';

export type MessageLayout = 'cozy' | 'compact' | 'bubbles' | 'cards';

export type StreamerMode = 'off' | 'on' | 'auto';
...
